--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@chakra-ui/react": "^2.4.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "axios": "^1.2.0",
+    "axios-hooks": "^4.0.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "framer-motion": "^6.5.1",
     "next": "13.0.5",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sequelize": "^6.26.0"
   }
 }
